--- a/website/journal.html
+++ b/website/journal.html
@@ -249,6 +249,11 @@
     <div class="row">
         <div id="context-firstrow" class="col-md-2 col-sm-12 col-xs-12">
             <h2>PORTFOLIO</h2>
+            <a href="" class="portfolio_link">Portfolio 1</a>
+            <a href="" class="portfolio_link">Portfolio 1</a>
+            <a href="" class="portfolio_link">Portfolio 1</a>
+            <a href="" class="portfolio_link">Portfolio 1</a>
+            <a href="" class="portfolio_link">Portfolio 1</a>
             
         </div>
         <div id="context-head" class="col-md-8 col-sm-12 col-xs-12">
@@ -280,6 +285,7 @@
                               <td>Exchange</td>
                                 <td>Symbol</td>
                                 <td>Currency</td>
+                                <td>Side</td>
                                 <td>Price</td>
                                 <td>Qauntity</td>
                                 <td>Timeplaced</td>
