--- a/website/datacenternew.html
+++ b/website/datacenternew.html
@@ -1,10 +1,16 @@
 <!doctype html>
 <html>
 <head>
-<link rel="stylesheet" href="bootstrap-4.1.3/css/bootstrap.min.css">    
+<link rel="stylesheet" href="bootstrap-4.1.3/css/bootstrap.min.css">
 <script src="bootstrap-4.1.3/js/bootstrap.min.js"></script>
 <link rel="stylesheet" href="css/datacenter.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<script src="js/app.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script src="js/web3.min.js"></script>
+<script src="js/truffle-contract.js"></script>
+
+
 </head>
 <body>
 <nav class="navbar navbar-expand-lg fixed-top navbar-dark">
@@ -77,7 +83,7 @@
         <h3>Showcase best trades #1</h3>
         </div>
         <div class="image-content">
-           <img src="img/tradeimg.png" alt="img of chart" class="img-fluid" height="50%"> 
+           <img src="img/tradeimg.png" alt="img of chart" class="img-fluid" height="50%">
         </div>
         <div class="info-content">
             <div class="image-description">
