--- a/website/datacenternew.html
+++ b/website/datacenternew.html
@@ -5,10 +5,6 @@
 <script src="bootstrap-4.1.3/js/bootstrap.min.js"></script>
 <link rel="stylesheet" href="css/datacenter.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<script src="js/app.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-<script src="js/web3.min.js"></script>
-<script src="js/truffle-contract.js"></script>
 
 
 </head>
@@ -74,7 +70,9 @@
         <div class="row">
         <div class="user-buy col-md-12">
             <h3>Buy data</h3>
-            <input type="submit" id="ethPrice" value="Buy now 0.5 ETH"> test
+            <input type="submit" value="Buy now 0.5 ETH">
+            <button class="btn btn-default btn-create" type="button">Update my balance</button>
+            <span id="priceEth"></span> in Ether
         </div>
         </div>
     </nav>
@@ -137,5 +135,9 @@
     </div>
 </div>
 </div>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script src="js/web3.min.js"></script>
+<script src="js/truffle-contract.js"></script>
+<script src="js/app.js"></script>
 </body>
 </html>
