--- a/website/datacenternew.html
+++ b/website/datacenternew.html
@@ -71,8 +71,10 @@
         <div class="user-buy col-md-12">
             <h3>Buy data</h3>
             <input type="submit" value="Buy now 0.5 ETH">
-            <button class="btn btn-default btn-create" type="button">Update my balance</button>
-            <span id="priceEth"></span> in Ether
+            <button class="btn btn-default btn-create-contract-request" type="button">Amount of contracts created :</button>
+            amunt of contracts : <span id="amountOfContracts"></span>
+            <button class="btn btn-default btn-create" type="button">Create a default contract :</buttoamunt of contracts :         <span id="priceEth"></span> in Ether
+            Creation of contract was : <span id="contractSucces"></span>
         </div>
         </div>
     </nav>
