--- a/website/header.html
+++ b/website/header.html
@@ -25,9 +25,21 @@
     	</ul>
   	</div>!-->
 <a class="navbar-brand" href="Index.html">
-Tradingcenter
+ Tradingcenter
 </a>
-    
+    <div class="header-section-rigth">
+<ul class="navbar-items">
+<li><a href="home.html" class="nav-link">Home</a></li> 
+<li><a href="journal.php" class="nav-link">Journal</a></li>
+<li><a href="datacenteroverview.php" class="nav-link">Datacenter</a></li>
+</ul>
+        <form class="form-inline my-2 my-lg-0 navbar-items">
+      		<input class="form-control mr-sm-2" type="text" placeholder="Search" size="50">
+      		<button class="btn btn-success my-2 my-sm-0" type="button" id="Bsearch">Search</button>
+    	</form>
+<ul class="navbar-items" id="rightButtonNav" class="navbar-items">
+</ul>
+    </div>  
 </nav>
 <!--buttons modal demo-->
 <!--Login modal-->
@@ -127,3 +139,4 @@ Tradingcenter
     	</div>
 		</div>
 </div>
+<script src="js/header.js" type="text/javascript"></script>
