--- a/website/header.html
+++ b/website/header.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg fixed-top">
-<a class="navbar-brand" href="Index.html">
+<a class="navbar-brand" href="Index.php">
  Tradingcenter
 </a>
       <span class="navbar-toggler-icon" id="menu" ><i class="fa fa-bars"></i></span>
@@ -21,7 +21,7 @@
 <div id="navbar-overlay" class="overlay">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
   <div class="overlay-content" id="rightButtonNav">
-    <a href="home.html">Home</a>
+    <a href="home.php">Home</a>
     <a href="journal.php">Journal</a>
     <a href="datacenteroverview.php">Datacenter</a>
   </div>
